kubernetes/apps/network/internal/remote-services/services/unraid-portainer.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-unraid-portainer
  namespace: network
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-unraid-portainer
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-unraid-portainer
addressType: IPv4
ports:
  - port: 9000
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-unraid-portainer
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "portainer"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Portainer"
    gethomepage.dev/description: "Docker Management UI"
    gethomepage.dev/href: "https://portainer.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Services"
    gethomepage.dev/icon: "portainer.png"
    gethomepage.dev/widget.type: "portainer"
    gethomepage.dev/widget.url: http://${SETTINGS_NAS_IP}:9000
    gethomepage.dev/widget.env: "1"
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_PORTAINER_TOKEN}"
    gethomepage.dev/siteMonitor: http://${SETTINGS_NAS_IP}:9000
spec:
  ingressClassName: internal
  rules:
    - host: "portainer.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-unraid-portainer
              port:
                number: 9000
  tls:
    - hosts:
        - "portainer.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
